ui(css/): fix #zoom-background briefly visible when loaded
* ensure the initial state of #zoom-background to be invisible

--- a/css/env.css
+++ b/css/env.css
@@ -82,16 +82,15 @@ section.env-img img {
   position: fixed;
   height: 100%;
   width: 100%;
-  background: black;
-  opacity: 0;
   z-index: 1000;
   pointer-events: none;
-  transition: opacity 0.5s;
+  background-color: transparent;
+  transition: background-color 0.5s;
 }
 
 /* zoomed */
 .zoomed #zoom-background {
-  opacity: 0.75;
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 html.zoomed {
